--- a/sdk/tables/Microsoft.Azure.WebJobs.Extensions.Tables/tests/Microsoft.Azure.WebJobs.Extensions.Tables.Tests.csproj
+++ b/sdk/tables/Microsoft.Azure.WebJobs.Extensions.Tables/tests/Microsoft.Azure.WebJobs.Extensions.Tables.Tests.csproj
@@ -18,5 +18,13 @@
     <ProjectReference Include="..\src\Microsoft.Azure.WebJobs.Extensions.Tables.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Remove="TableEntityToPocoConverterTests.cs" />
+    <Compile Remove="TableEntityValueBinderTests.cs" />
+    <Compile Remove="PocoToTableEntityConverterTests.cs" />
+    <Compile Remove="EntityPropertyToTConverterFactoryTests.cs" />
+    <Compile Remove="TToEntityPropertyConverterFactoryTests.cs" />
+  </ItemGroup>
+
 
 </Project>
