--- a/eng/.docsettings.yml
+++ b/eng/.docsettings.yml
@@ -29,10 +29,10 @@ required_readme_sections:
   - ^Next steps$
   - ^Contributing$
 known_presence_issues:
-  - ['sdk/alertsmanagement/Microsoft.Azure.Management.AlertsManagement','Track 1']
+
   - ['sdk/applicationinsights/Microsoft.Azure.ApplicationInsights.Query','Track 1']
+  - ['sdk/attestation/Microsoft.Azure.Attestation','Track 1']
   - ['sdk/batch/Microsoft.Azure.Batch.FileStaging','Track 1']
-  - ['sdk/batch/Microsoft.Azure.Batch/Tools','Track 1']
   - ['sdk/batch/Microsoft.Azure.Batch/Tools','Track 1']
   - ['sdk/cognitiveservices/AnomalyDetector','Track 1']
   - ['sdk/cognitiveservices/Knowledge.QnAMaker','Track 1']
@@ -56,9 +56,8 @@ known_presence_issues:
   - ['sdk/cognitiveservices/Vision.CustomVision.Prediction','Track 1']
   - ['sdk/cognitiveservices/Vision.CustomVision.Training','Track 1']
   - ['sdk/cognitiveservices/Vision.Face','Track 1']
-  - ['sdk/cognitiveservices/Vision.FormRecognizer','Track 1']
   - ['sdk/containerregistry/Microsoft.Azure.ContainerRegistry','Track 1']
-  - ['sdk/eventgrid/Azure.Messaging.EventGrid/EventGridSourceGenerator','Track 1']
+  - ['sdk/eventgrid/Azure.Messaging.EventGrid/EventGridSourceGenerator','***WHY IS THIS REQUIRED?']
   - ['sdk/eventgrid/Microsoft.Azure.EventGrid','Track 1']
   - ['sdk/eventhub/Microsoft.Azure.EventHubs.Processor','Track 1']
   - ['sdk/eventhub/Microsoft.Azure.EventHubs.ServiceFabricProcessor','Track 1']
@@ -68,92 +67,68 @@ known_presence_issues:
   - ['sdk/keyvault/Microsoft.Azure.KeyVault.Cryptography','Track 1']
   - ['sdk/keyvault/Microsoft.Azure.KeyVault.Extensions','Track 1']
   - ['sdk/keyvault/Microsoft.Azure.KeyVault.WebKey','Track 1']
-  - ["sdk/mediaservices/Microsoft.Azure.Media.LiveVideoAnalytics.Edge", "Track 1"]
-  - ['sdk/operationalinsights/Microsoft.Azure.OperationalInsights','Track 1']
+  - ['sdk/operationalinsights/Microsoft.Azure.OperationalInsights','Track 1']  
   - ['sdk/search/Microsoft.Azure.Search.Common','Track 1']
   - ['sdk/search/Microsoft.Azure.Search.Data','Track 1']
-  - ['sdk/search/Microsoft.Azure.Search.Service','Track 1']
+  - ['sdk/search/Microsoft.Azure.Search.Service','Track 1']  
+  - ['sdk/operationalinsights/Microsoft.Azure.OperationalInsights','Track 1']
   - ['sdk/search/Microsoft.Azure.Search','Track 1']
-  - ['sdk/applicationinsights/Microsoft.Azure.ApplicationInsights.Query/CHANGELOG.md','Track 1']
-  - ['sdk/batch/Microsoft.Azure.Batch.Conventions.Files/CHANGELOG.md','Track 1']
-  - ['sdk/batch/Microsoft.Azure.Batch.FileStaging/CHANGELOG.md','Track 1']
-  - ['sdk/batch/Microsoft.Azure.Batch/Tools/CHANGELOG.md','Track 1']
-  - ['sdk/cognitiveservices/AnomalyDetector/CHANGELOG.md','Track 1']
-  - ['sdk/cognitiveservices/FormRecognizer/CHANGELOG.md','Track 1']
-  - ['sdk/cognitiveservices/Knowledge.QnAMaker/CHANGELOG.md','Track 1']
-  - ['sdk/cognitiveservices/Language.LUIS.Authoring/CHANGELOG.md','Track 1']
-  - ['sdk/cognitiveservices/Language.LUIS.Runtime/CHANGELOG.md','Track 1']
-  - ['sdk/cognitiveservices/Language.SpellCheck/CHANGELOG.md','Track 1']
-  - ['sdk/cognitiveservices/Language.TextAnalytics/CHANGELOG.md','Track 1']
-  - ['sdk/cognitiveservices/Personalizer/CHANGELOG.md','Track 1']
-  - ['sdk/cognitiveservices/Search.BingAutoSuggest/CHANGELOG.md','Track 1']
-  - ['sdk/cognitiveservices/Search.BingCustomImageSearch/CHANGELOG.md','Track 1']
-  - ['sdk/cognitiveservices/Search.BingCustomSearch/CHANGELOG.md','Track 1']
-  - ['sdk/cognitiveservices/Search.BingEntitySearch/CHANGELOG.md','Track 1']
-  - ['sdk/cognitiveservices/Search.BingImageSearch/CHANGELOG.md','Track 1']
-  - ['sdk/cognitiveservices/Search.BingLocalSearch/CHANGELOG.md','Track 1']
-  - ['sdk/cognitiveservices/Search.BingNewsSearch/CHANGELOG.md','Track 1']
-  - ['sdk/cognitiveservices/Search.BingVideoSearch/CHANGELOG.md','Track 1']
-  - ['sdk/cognitiveservices/Search.BingVisualSearch/CHANGELOG.md','Track 1']
-  - ['sdk/cognitiveservices/Search.BingWebSearch/CHANGELOG.md','Track 1']
-  - ['sdk/cognitiveservices/Vision.ComputerVision/CHANGELOG.md','Track 1']
-  - ['sdk/cognitiveservices/Vision.ContentModerator/CHANGELOG.md','Track 1']
-  - ['sdk/cognitiveservices/Vision.CustomVision.Prediction/CHANGELOG.md','Track 1']
-  - ['sdk/cognitiveservices/Vision.CustomVision.Training/CHANGELOG.md','Track 1']
-  - ['sdk/cognitiveservices/Vision.Face/CHANGELOG.md','Track 1']
-  - ['sdk/containerregistry/Microsoft.Azure.ContainerRegistry/CHANGELOG.md','Track 1']
-  - ['sdk/eventgrid/Microsoft.Azure.EventGrid/CHANGELOG.md','Track 1']
-  - ['sdk/eventhub/Microsoft.Azure.EventHubs.Processor/CHANGELOG.md','Track 1']
-  - ['sdk/eventhub/Microsoft.Azure.EventHubs.ServiceFabricProcessor/CHANGELOG.md','Track 1']
-  - ['sdk/eventhub/Microsoft.Azure.EventHubs/CHANGELOG.md','Track 1']
-  - ['sdk/graphrbac/Microsoft.Azure.Graph.RBAC/CHANGELOG.md','Track 1']
-  - ['sdk/hdinsight/Microsoft.Azure.HDInsight.Job/CHANGELOG.md','Track 1']
-  - ['sdk/keyvault/Microsoft.Azure.KeyVault.Core/CHANGELOG.md','Track 1']
-  - ['sdk/keyvault/Microsoft.Azure.KeyVault.Cryptography/CHANGELOG.md','Track 1']
-  - ['sdk/keyvault/Microsoft.Azure.KeyVault.Extensions/CHANGELOG.md','Track 1']
-  - ['sdk/keyvault/Microsoft.Azure.KeyVault.WebKey/CHANGELOG.md','Track 1']
-  - ['sdk/keyvault/Microsoft.Azure.KeyVault/CHANGELOG.md','Track 1']
-  - ['sdk/operationalinsights/Microsoft.Azure.OperationalInsights/CHANGELOG.md','Track 1']
   - ['sdk/search/Microsoft.Azure.Search.Common/CHANGELOG.md','Track 1']
   - ['sdk/search/Microsoft.Azure.Search.Data/CHANGELOG.md','Track 1']
   - ['sdk/search/Microsoft.Azure.Search.Service/CHANGELOG.md','Track 1']
-  - ['sdk/attestation/Microsoft.Azure.Attestation','Track 1']
 
 known_content_issues:
   - ['README.md','Root readme']
   - ['doc/README.md','Doc readme']
-  - ['sdk/core/Azure.Core.Experimental/README.md', 'Not a service library']
-  - ['sdk/core/Azure.Core.Amqp/README.md', '#5499']
-  - ['sdk/core/System.Memory.Data/README.md', '#5499']
-  - ['sdk/eventhub/Microsoft.Azure.EventHubs/README.md','Track 1']
-  - ['sdk/eventhub/Azure.Messaging.EventHubs.Shared/README.md','Not a service library']
   - ['sdk/alertsmanagement/Microsoft.Azure.Management.AlertsManagement/README.md','Track 1']
+
   - ['sdk/appconfiguration/README.md','azure-sdk-tools/issues/42']
-  - ['sdk/storage/README.md','azure-sdk-tools/issues/42']
+
+  - ['sdk/batch/Microsoft.Azure.Batch/README.md','Track 1']
+  - ['sdk/batch/Microsoft.Azure.Batch.Conventions.Files/README.md','Track 1']
+
   - ['sdk/cognitiveservices/FormRecognizer/README.md','Track 1']
   - ['sdk/cognitiveservices/Language.TextAnalytics/src/README.md','Track 1']
   - ['sdk/cognitiveservices/Personalizer/src/README.md','Track 1']
-  - ['sdk/batch/Microsoft.Azure.Batch/README.md','Track 1']
-  - ['sdk/batch/Microsoft.Azure.Batch.Conventions.Files/README.md','Track 1']
+
+  - ['sdk/core/Azure.Core/README.md', 'Opt out of sections: https://github.com/Azure/azure-sdk-tools/issues/404']
+  - ['sdk/core/Azure.Core.Amqp/README.md', 'Opt out of sections: https://github.com/Azure/azure-sdk-tools/issues/404']
+  - ['sdk/core/Azure.Core.Experimental/README.md', 'Opt out of sections: https://github.com/Azure/azure-sdk-tools/issues/404']
+  - ['sdk/core/Azure.Core.TestFramework/README.md', '#11492']
+
+  - ['sdk/core/Microsoft.Azure.Core.NewtonsoftJson/README.md', '#15423']
+  - ['sdk/core/Microsoft.Azure.Core.Spatial/README.md', '#15423']
+  - ['sdk/core/Microsoft.Azure.Core.Spatial.NewtonsoftJson/README.md', '#15423']
+
+  - ['sdk/core/System.Memory.Data/README.md', '#5499']
+
+  - ['sdk/eventgrid/README.md','azure-sdk-tools/issues/42']
+  - ['sdk/eventgrid/Microsoft.Azure.Messaging.EventGrid.CloudNativeCloudEvents/README.md', '#15423']  
+  - ['sdk/eventhub/README.md','azure-sdk-tools/issues/42']
+  - ['sdk/eventhub/Azure.Messaging.EventHubs.Shared/README.md','Not a service library']
+  - ['sdk/eventhub/Microsoft.Azure.EventHubs/README.md','Track 1']
+  
   - ['sdk/extensions/README.md','azure-sdk-tools/issues/42']
   - ['sdk/extensions/Azure.Extensions.AspNetCore.DataProtection.Blobs/README.md','azure-sdk-tools/issues/404']
   - ['sdk/extensions/Azure.Extensions.AspNetCore.DataProtection.Keys/README.md','azure-sdk-tools/issues/404']
   - ['sdk/extensions/Azure.Extensions.AspNetCore.Configuration.Secrets/README.md', 'azure-sdk-tools/issues/404']
   - ['sdk/extensions/Microsoft.Azure.WebJobs.Extensions.Clients/README.md','azure-sdk-tools/issues/404']
   - ['sdk/extensions/Microsoft.Extensions.Azure/README.md','#5499']
-  - ['sdk/eventgrid/README.md','azure-sdk-tools/issues/42']
-  - ['sdk/eventgrid/Microsoft.Azure.Messaging.EventGrid.CloudNativeCloudEvents/README.md', '#15423']
-  - ['sdk/eventhub/README.md','azure-sdk-tools/issues/42']
-  - ['sdk/search/README.md','azure-sdk-tools/issues/42']
-  - ['sdk/storage/Azure.Storage.Common/README.md','azure-sdk-tools/issues/42']
-  - ['sdk/core/Azure.Core.TestFramework/README.md', '#11492']
-  - ['sdk/core/Microsoft.Azure.Core.NewtonsoftJson/README.md', '#15423']
-  - ['sdk/core/Microsoft.Azure.Core.Spatial/README.md', '#15423']
-  - ['sdk/core/Microsoft.Azure.Core.Spatial.NewtonsoftJson/README.md', '#15423']
-  - ['sdk/servicebus/Microsoft.Azure.WebJobs.Extensions.ServiceBus/README.md', '#15423']
+
+  - ['sdk/keyvault/Microsoft.Azure.KeyVault/README.md','Track 1']
+
   - ['sdk/personalizer/README.md','azure-sdk-tools/issues/42']
   - ['sdk/personalizer/Azure.AI.Personalizer/README.md','azure-sdk-tools/issues/42']
-  - ['sdk/webpubsub/Azure.Messaging.WebPubSub/README.md','azure-sdk-tools/issues/42']
+
+  - ['sdk/search/README.md','azure-sdk-tools/issues/42']
+
+  - ['sdk/servicebus/Microsoft.Azure.WebJobs.Extensions.ServiceBus/README.md', '#15423']
+  - ['sdk/servicebus/Microsoft.Azure.ServiceBus/README.md','Track 1']
+
+  - ['sdk/storage/README.md','azure-sdk-tools/issues/42']
+  - ['sdk/storage/Azure.Storage.Common/README.md','azure-sdk-tools/issues/42']
+
+  - ['sdk/synapse/Microsoft.Azure.Synapse/README.md','Track 1']
 
 # .net climbs upwards. placing these to prevent assigning readmes to the wrong project
 package_indexing_exclusion_list:
