Add cosmos testing and more coverage for table creation scenario

--- a/sdk/tables/Microsoft.Azure.WebJobs.Extensions.Tables/tests/Microsoft.Azure.WebJobs.Extensions.Tables.Tests.csproj
+++ b/sdk/tables/Microsoft.Azure.WebJobs.Extensions.Tables/tests/Microsoft.Azure.WebJobs.Extensions.Tables.Tests.csproj
@@ -22,6 +22,8 @@
     <Compile Remove="TableEntityValueBinderTests.cs" />
     <Compile Remove="EntityPropertyToTConverterFactoryTests.cs" />
     <Compile Remove="TToEntityPropertyConverterFactoryTests.cs" />
+    
+    <Compile Include="..\..\Azure.Data.Tables\tests\TablesTestEnvironment.cs" />
   </ItemGroup>
 
 </Project>
