--- a/sdk/streamanalytics/Microsoft.Azure.Management.StreamAnalytics/src/Microsoft.Azure.Management.StreamAnalytics.csproj
+++ b/sdk/streamanalytics/Microsoft.Azure.Management.StreamAnalytics/src/Microsoft.Azure.Management.StreamAnalytics.csproj
@@ -7,7 +7,7 @@
 		<PackageId>Microsoft.Azure.Management.StreamAnalytics</PackageId>
 		<Description>Provides streaming job management capabilities for Microsoft Azure.</Description>
 		<AssemblyName>Microsoft.Azure.Management.StreamAnalytics</AssemblyName>
-		<Version>4.0.0-preview</Version>
+		<Version>4.0.0</Version>
 		<PackageTags>Microsoft Azure Stream Analytics management;Stream Analytics management;streaming jobs;streaming job management;</PackageTags>
 		<PackageReleaseNotes>
 			<![CDATA[
