--- a/sdk/storage/Azure.ResourceManager.Storage/tests/Azure.ResourceManager.Storage.Tests.csproj
+++ b/sdk/storage/Azure.ResourceManager.Storage/tests/Azure.ResourceManager.Storage.Tests.csproj
@@ -1,9 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <ItemGroup>
     <ProjectReference Include="..\src\Azure.ResourceManager.Storage.csproj" />
+    <ProjectReference Include="..\..\..\network\Azure.ResourceManager.Network\src\Azure.ResourceManager.Network.csproj" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Azure.Identity" />
-    <PackageReference Include="Azure.ResourceManager.Network" />
   </ItemGroup>
 </Project>
