--- a/sdk/core/Azure.Core.Experimental/src/Azure.Core.Experimental.csproj
+++ b/sdk/core/Azure.Core.Experimental/src/Azure.Core.Experimental.csproj
@@ -23,9 +23,9 @@
     <Compile Include="$(AzureCoreSharedSources)DiagnosticScopeFactory.cs" />
     <Compile Include="$(AzureCoreSharedSources)HttpMessageSanitizer.cs" />
     <Compile Include="$(AzureCoreSharedSources)HashCodeBuilder.cs" />
-    <Compile Include="$(AzureCoreSharedSources)OperationInternal.cs" />
-    <Compile Include="$(AzureCoreSharedSources)OperationInternalBase.cs" />
-    <Compile Include="$(AzureCoreSharedSources)OperationInternalOfT.cs" />
+    <Compile Include="$(AzureCoreSharedSources)OperationSubclientImplementation.cs" />
+    <Compile Include="$(AzureCoreSharedSources)OperationSubclientImplementationBase.cs" />
+    <Compile Include="$(AzureCoreSharedSources)OperationSubclientImplementationOfT.cs" />
     <Compile Include="$(AzureCoreSharedSources)TaskExtensions.cs" />
     <Compile Include="$(AzureCoreSharedSources)NullableAttributes.cs" />
   </ItemGroup>
