--- a/sdk/formrecognizer/Azure.AI.FormRecognizer/src/Azure.AI.FormRecognizer.csproj
+++ b/sdk/formrecognizer/Azure.AI.FormRecognizer/src/Azure.AI.FormRecognizer.csproj
@@ -27,9 +27,9 @@
     <Compile Include="$(AzureCoreSharedSources)DiagnosticScopeFactory.cs" LinkBase="Shared" />
     <Compile Include="$(AzureCoreSharedSources)HttpMessageSanitizer.cs" LinkBase="Shared" />
     <Compile Include="$(AzureCoreSharedSources)OperationHelpers.cs" LinkBase="Shared" />
-    <Compile Include="$(AzureCoreSharedSources)OperationSubclientImplementationOfT.cs" LinkBase="Shared" />
-    <Compile Include="$(AzureCoreSharedSources)OperationSubclientImplementation.cs" LinkBase="Shared" />
-    <Compile Include="$(AzureCoreSharedSources)OperationSubclientImplementationBase.cs" LinkBase="Shared" />
+    <Compile Include="$(AzureCoreSharedSources)OperationImplementationOfT.cs" LinkBase="Shared" />
+    <Compile Include="$(AzureCoreSharedSources)OperationImplementation.cs" LinkBase="Shared" />
+    <Compile Include="$(AzureCoreSharedSources)OperationImplementationBase.cs" LinkBase="Shared" />
     <Compile Include="$(AzureCoreSharedSources)TaskExtensions.cs" LinkBase="Shared" />
   </ItemGroup>
 
