--- a/sdk/tables/Microsoft.Azure.WebJobs.Extensions.Tables/tests/Microsoft.Azure.WebJobs.Extensions.Tables.Tests.csproj
+++ b/sdk/tables/Microsoft.Azure.WebJobs.Extensions.Tables/tests/Microsoft.Azure.WebJobs.Extensions.Tables.Tests.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="NUnit3TestAdapter" />
     <PackageReference Include="Microsoft.Azure.WebJobs" />
     <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.Http" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
     <PackageReference Include="Moq" />
   </ItemGroup>
@@ -24,7 +25,8 @@
     <Compile Remove="EntityPropertyToTConverterFactoryTests.cs" />
     <Compile Remove="TToEntityPropertyConverterFactoryTests.cs" />
     
-    <Compile Include="..\..\Azure.Data.Tables\tests\TablesTestEnvironment.cs" />
+    <Compile Include="..\..\Azure.Data.Tables\tests\TablesTestEnvironment.cs" LinkBase="Shared" />
+    <Compile Include="..\..\..\extensions\Microsoft.Azure.WebJobs.Extensions.Clients\tests\shared\*.cs" LinkBase="Shared" />
+    <Compile Remove="WebJobsShared\**" />
   </ItemGroup>
-
 </Project>
