--- a/sdk/deviceupdate/ci.yml
+++ b/sdk/deviceupdate/ci.yml
@@ -20,6 +20,7 @@ pr:
   paths:
     include:
     - sdk/deviceupdate/
+    - sdk/resourcemanager/
 
 extends:
   template: ../../eng/pipelines/templates/stages/archetype-sdk-client.yml
