--- a/sdk/servicebus/ci.mgmt.yml
+++ b/sdk/servicebus/ci.mgmt.yml
@@ -24,6 +24,7 @@ pr:
     - sdk/servicebus/ci.mgmt.yml
     - sdk/eventhub/service.projects
     - sdk/servicebus/Azure.ResourceManager.ServiceBus
+    - sdk/resourcemanager/
 
 extends:
   template: ../../eng/pipelines/templates/stages/archetype-sdk-client.yml
