--- a/sdk/cosmosdb/Azure.ResourceManager.CosmosDB/tests/Azure.ResourceManager.CosmosDB.Tests.csproj
+++ b/sdk/cosmosdb/Azure.ResourceManager.CosmosDB/tests/Azure.ResourceManager.CosmosDB.Tests.csproj
@@ -1,9 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <ItemGroup>
-    <PackageReference Include="Azure.ResourceManager.Network"/>
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="$(AzureCoreTestFramework)" />
     <ProjectReference Include="..\src\Azure.ResourceManager.CosmosDB.csproj" />
+    <ProjectReference Include="..\..\..\network\Azure.ResourceManager.Network\src\Azure.ResourceManager.Network.csproj" />
   </ItemGroup>
 </Project>
