--- a/sdk/storage/Azure.Storage.DataMovement/src/Azure.Storage.DataMovement.csproj
+++ b/sdk/storage/Azure.Storage.DataMovement/src/Azure.Storage.DataMovement.csproj
@@ -5,7 +5,7 @@
   <PropertyGroup>
     <AssemblyTitle>Microsoft Azure.Storage.DataMovement client library</AssemblyTitle>
     <Version>12.0.0-preview.1</Version>
-    <DefineConstants>CommonSDK;$(DefineConstants)</DefineConstants>
+    <DefineConstants>BlobDataMovementSDK;$(DefineConstants)</DefineConstants>
     <PackageTags>Microsoft Azure Storage Common DataMovement, Microsoft, Azure, StorageScalable, azureofficial</PackageTags>
     <Description>
       This client library enables working with the Microsoft Azure Storage services which include the blob and file services for storing binary and text data, and the queue service for storing messages that may be accessed by a client.
@@ -14,7 +14,7 @@
       Microsoft Azure Storage quickstarts and tutorials - https://docs.microsoft.com/en-us/azure/storage/
       Microsoft Azure Storage REST API Reference - https://docs.microsoft.com/en-us/rest/api/storageservices/
     </Description>
-    <RootNamespace>Azure.Storage</RootNamespace>
+    <RootNamespace>Azure.Storage.DataMovment</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Threading" VersionOverride="16.10.56" />
@@ -27,5 +27,69 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="$(AzureStorageSharedSources)Constants.cs" Link="Shared\%(RecursiveDir)\%(Filename)%(Extension)" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="$(AzureCoreSharedSources)AppContextSwitchHelper.cs" LinkBase="SharedCore" />
+    <Compile Include="$(AzureCoreSharedSources)AuthorizationChallengeParser.cs" LinkBase="Shared\Core" />
+    <Compile Include="$(AzureCoreSharedSources)AzureResourceProviderNamespaceAttribute.cs" LinkBase="SharedCore" />
+    <Compile Include="$(AzureCoreSharedSources)AzureSasCredentialSynchronousPolicy.cs" LinkBase="SharedCore" />
+    <Compile Include="$(AzureCoreSharedSources)OperationHelpers.cs" LinkBase="SharedCore" />
+    <Compile Include="$(AzureCoreSharedSources)RetriableStream.cs" LinkBase="SharedCore" />
+    <Compile Include="$(AzureCoreSharedSources)ArrayBufferWriter.cs" LinkBase="SharedCore" />
+    <Compile Include="$(AzureCoreSharedSources)ClientDiagnostics.cs" LinkBase="SharedCore" />
+    <Compile Include="$(AzureCoreSharedSources)DiagnosticScope.cs" LinkBase="SharedCore" />
+    <Compile Include="$(AzureCoreSharedSources)ForwardsClientCallsAttribute.cs" LinkBase="SharedCore" />
+    <Compile Include="$(AzureCoreSharedSources)HashCodeBuilder.cs" LinkBase="SharedCore" />
+    <Compile Include="$(AzureCoreSharedSources)NoBodyResponseOfT.cs" LinkBase="SharedCore" />
+    <Compile Include="$(AzureCoreSharedSources)ContentTypeUtilities.cs" LinkBase="SharedCore" />
+    <Compile Include="$(AzureCoreSharedSources)HttpMessageSanitizer.cs" LinkBase="SharedCore" />
+    <Compile Include="$(AzureCoreSharedSources)DiagnosticScopeFactory.cs" LinkBase="SharedCore" />
+    <Compile Include="$(AzureCoreSharedSources)TaskExtensions.cs" LinkBase="SharedCore" />
+    <Compile Include="$(AzureCoreSharedSources)OperationInternal.cs" LinkBase="Shared" />
+    <Compile Include="$(AzureCoreSharedSources)OperationInternalBase.cs" LinkBase="Shared" />
+    <Compile Include="$(AzureCoreSharedSources)OperationInternalOfT.cs" LinkBase="Shared" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="$(AzureStorageSharedSources)ClientsideEncryption\*.cs" LinkBase="SharedStorage" />
+    <Compile Include="$(AzureStorageSharedSources)ClientsideEncryption\Models\*.cs" LinkBase="SharedStorage" />
+    <Compile Include="$(AzureStorageSharedSources)AggregatingProgressIncrementer.cs" LinkBase="SharedStorage" />
+    <Compile Include="$(AzureStorageSharedSources)Errors.cs" LinkBase="SharedStorage" />
+    <Compile Include="$(AzureStorageSharedSources)Errors.Clients.cs" LinkBase="SharedStorage" />
+    <Compile Include="$(AzureStorageSharedSources)GeoRedundantReadPolicy.cs" LinkBase="SharedStorage" />
+    <Compile Include="$(AzureStorageSharedSources)HashAlgorithmHasher.cs" LinkBase="SharedStorage" />
+    <Compile Include="$(AzureStorageSharedSources)IDownloadedContent.cs" LinkBase="SharedStorage" />
+    <Compile Include="$(AzureStorageSharedSources)IHasher.cs" LinkBase="SharedStorage" />
+    <Compile Include="$(AzureStorageSharedSources)LoggingExtensions.cs" LinkBase="SharedStorage" />
+    <Compile Include="$(AzureStorageSharedSources)NonCryptographicHashAlgorithmHasher.cs" LinkBase="SharedStorage" />
+    <Compile Include="$(AzureStorageSharedSources)NonDisposingStream.cs" LinkBase="SharedStorage" />
+    <Compile Include="$(AzureStorageSharedSources)PartitionedUploader.cs" LinkBase="SharedStorage" />
+    <Compile Include="$(AzureStorageSharedSources)PooledMemoryStream.cs" LinkBase="SharedStorage" />
+    <Compile Include="$(AzureStorageSharedSources)ProgressIncrementingStream.cs" LinkBase="SharedStorage" />
+    <Compile Include="$(AzureStorageSharedSources)SasExtensions.cs" LinkBase="SharedStorage" />
+    <Compile Include="$(AzureStorageSharedSources)SasQueryParametersInternals.cs" LinkBase="SharedStorage" />
+    <Compile Include="$(AzureStorageSharedSources)SharedAccessSignatureCredentials.cs" LinkBase="SharedStorage" />
+    <Compile Include="$(AzureStorageSharedSources)SlicedStream.cs" LinkBase="SharedStorage" />
+    <Compile Include="$(AzureStorageSharedSources)StorageClientConfiguration.cs" LinkBase="SharedStorage" />
+    <Compile Include="$(AzureStorageSharedSources)StorageClientDiagnostics.cs" LinkBase="SharedStorage" />
+    <Compile Include="$(AzureStorageSharedSources)StorageClientOptions.cs" LinkBase="SharedStorage" />
+    <Compile Include="$(AzureStorageSharedSources)StorageConnectionString.cs" LinkBase="SharedStorage" />
+    <Compile Include="$(AzureStorageSharedSources)StorageCollectionEnumerator.cs" LinkBase="SharedStorage" />
+    <Compile Include="$(AzureStorageSharedSources)StorageExtensions.cs" LinkBase="SharedStorage" />
+    <Compile Include="$(AzureStorageSharedSources)StorageExceptionExtensions.cs" LinkBase="SharedStorage" />
+    <Compile Include="$(AzureStorageSharedSources)StorageRequestValidationPipelinePolicy.cs" LinkBase="SharedStorage" />
+    <Compile Include="$(AzureStorageSharedSources)StorageProgressExtensions.cs" LinkBase="SharedStorage" />
+    <Compile Include="$(AzureStorageSharedSources)StorageSharedKeyCredentialInternals.cs" LinkBase="SharedStorage" />
+    <Compile Include="$(AzureStorageSharedSources)StorageSharedKeyPipelinePolicy.cs" LinkBase="SharedStorage" />
+    <Compile Include="$(AzureStorageSharedSources)StorageResponseClassifier.cs" LinkBase="SharedStorage" />
+    <Compile Include="$(AzureStorageSharedSources)StorageServerTimeoutPolicy.cs" LinkBase="SharedStorage" />
+    <Compile Include="$(AzureStorageSharedSources)StorageVersionExtensions.cs" LinkBase="SharedStorage" />
+    <Compile Include="$(AzureStorageSharedSources)UriExtensions.cs" LinkBase="SharedStorage" />
+    <Compile Include="$(AzureStorageSharedSources)UriQueryParamsCollection.cs" LinkBase="SharedStorage" />
+    <Compile Include="$(AzureStorageSharedSources)UserDelegationKeyProperties.cs" LinkBase="SharedStorage" />
+    <Compile Include="$(AzureStorageSharedSources)WindowStream.cs" LinkBase="SharedStorage" />
+    <Compile Include="$(AzureStorageSharedSources)StorageWriteStream.cs" LinkBase="SharedStorage" />
+    <Compile Include="$(AzureStorageSharedSources)\StorageBearerTokenChallengeAuthorizationPolicy.cs" LinkBase="SharedStorage" />
+    <Compile Include="$(AzureStorageSharedSources)ISupportsTenantIdChallenges.cs" LinkBase="SharedStorage" />
+    <Compile Include="$(AzureStorageSharedSources)TaskThrottler.cs" LinkBase="SharedStorage" />
   </ItemGroup>
 </Project>
