--- a/sdk/tables/Microsoft.Azure.WebJobs.Extensions.Tables/tests/Microsoft.Azure.WebJobs.Extensions.Tables.Tests.csproj
+++ b/sdk/tables/Microsoft.Azure.WebJobs.Extensions.Tables/tests/Microsoft.Azure.WebJobs.Extensions.Tables.Tests.csproj
@@ -14,6 +14,9 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
     <PackageReference Include="Moq" />
+    
+    <!-- Prevent Extensions.Storage from switching to the latest V5 project reference in tests -->
+    <ExcludeFromProjectReferenceToConversion Include="Microsoft.Azure.WebJobs.Extensions.Storage" />
   </ItemGroup>
 
   <ItemGroup>
