--- a/sdk/communication/Azure.ResourceManager.Communication/tests/Azure.ResourceManager.Communication.Tests.csproj
+++ b/sdk/communication/Azure.ResourceManager.Communication/tests/Azure.ResourceManager.Communication.Tests.csproj
@@ -1,9 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <ItemGroup>
     <ProjectReference Include="..\src\Azure.ResourceManager.Communication.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Azure.Identity" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="SessionRecords\CommunicationCrudTests\" />
   </ItemGroup>
 </Project>
