--- a/sdk/connectedvmware/Azure.ResourceManager.ConnectedVMware/src/Azure.ResourceManager.ConnectedVMware.csproj
+++ b/sdk/connectedvmware/Azure.ResourceManager.ConnectedVMware/src/Azure.ResourceManager.ConnectedVMware.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <Version>1.0.0-beta.1</Version>
-    <PackageId>Azure.ResourceManager.ConnectedVmware</PackageId>
-    <Description>Azure Resource Manager client SDK for Azure resource provider ConnectedVmware</Description>
+    <PackageId>Azure.ResourceManager.ConnectedVMware</PackageId>
+    <Description>Azure Resource Manager client SDK for Azure resource provider ConnectedVMware</Description>
     <PackageTags>azure;management;arm;resource manager;connectedvmware</PackageTags>
   </PropertyGroup>
 </Project>
