--- a/sdk/connectedvmware/ci.yml
+++ b/sdk/connectedvmware/ci.yml
@@ -28,5 +28,5 @@ extends:
     ServiceDirectory: connectedvmware
     ArtifactName: packages
     Artifacts:
-    - name: Azure.ResourceManager.ConnectedVmware
-      safeName: AzureResourceManagerConnectedVmware
+    - name: Azure.ResourceManager.ConnectedVMware
+      safeName: AzureResourceManagerConnectedVMware
