Fixed casing problem

--- a/sdk/connectedvmwarevsphere/ci.yml
+++ b/sdk/connectedvmwarevsphere/ci.yml
@@ -28,5 +28,5 @@ extends:
     ServiceDirectory: connectedvmwarevsphere
     ArtifactName: packages
     Artifacts:
-    - name: Azure.ResourceManager.connectedvmwarevsphere
+    - name: Azure.ResourceManager.ConnectedVMwarevSphere
       safeName: AzureResourceManagerConnectedVMwarevSphere
