Add Microsoft.Azure.WebJobs.Extensions.Tables to artifacts

--- a/sdk/tables/ci.yml
+++ b/sdk/tables/ci.yml
@@ -30,3 +30,5 @@ extends:
     Artifacts:
     - name: Azure.Data.Tables
       safeName: AzureDataTables
+    - name: Microsoft.Azure.WebJobs.Extensions.Tables
+      safeName: MicrosoftAzureWebJobsExtensionsTables
